--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,25 @@ footer{
 #shake{
   float: right;
 }
+
+.result{
+  box-shadow: 3px 3px 5px black;
+  background-color: rgba(0,0,0,0.2);
+  height: 90px;
+  margin: auto;
+  width: 50%;
+}
+#rolled{
+  margin: auto;
+  width: 50%;
+  text-align: center;
+  text-transform: capitalize;
+  text-shadow: 2px 2px 2px #8417;
+  font-size: 20px;
+}
+#all, #per{
+  text-align: center;
+  text-transform: capitalize;
+  text-shadow: 2px 2px 2px #8417;
+  font-size: 20px;
+}
