--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,18 @@ footer{
 .playe1{
   margin: auto;
   width: 50%;
-  -webkit-transform:rotate(-3deg);
+  -webkit-transform:rotate(-2deg);
   -webkit-box-shadow: 3px 3px 5px black;
   box-shadow: 3px 3px 5px black;
 
+}
+.dice{
+  margin: auto;
+  width:50%;
+  height: auto;
+  margin-left: 200px;
+}
+.dice img{
+  height: 50px;
+  width: 50px;
 }
