--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,8 @@ footer{
   -webkit-box-shadow: 3px 3px 5px black;
   box-shadow: 3px 3px 5px black;
   display: inline-block;
+  background-color: #ffedfe;
+  color: blue;
 
 }
 .dice{
