--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,15 @@ body{
 footer{
   position: relative;
   border-bottom: 0;
+  background-color: #125787;
+}
+#foot{
+  background-color: #2c2c2c;
+
+}
+#foot p{
+  color: white;
+
 }
 #player1,#player2{
   width: 50%;
